--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <ul>
                         <li><a href="https://www.linkedin.com/in/eoghan-russell-774bb2171/">LinkedIn</a></li
                     </ul>
-                    <p>Or, you can <a href="eoghanrussell123@gmail.com">send me an email</a>.</p>
+                    <p>Or, you can send me an email - Eoghanrussell123@gmail.com</p>
                 </div>
             </section>
         </main>
