--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <section id="about">
                 <div class="section-inner">
                     <h2>About me</h2>
-                    <p>Testing summary</p>
+                    <p>I'm a Computer Games Development Student at the University of Limerick.</p>
                     <h3>Achievements</h3>
                     <ul>
                         <li>Test</li>
