--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Eoghan Russell</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style1.css">
     </head>
 
     <body>
