--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
             </section>
              <section id="projects">
                 <div class="section-inner">
-                    <h1>Projects.</h1>
+                    <h2>Projects.</h2>
+                    <p>Java Projects:</p>
+                    <ul>
+                        <li><a href="https://github.com/Eoghan1232/Java_files">Java_Projects</a></li>
+                        </u>
                 </div>
             </section>
             <section id="contact">
@@ -47,7 +51,7 @@
                     <h2>Contact me</h2>
                     <p>You can find me on:</p>
                     <ul>
-                        <li><a href="https://www.linkedin.com/in/eoghan-russell-774bb2171/">LinkedIn</a></li
+                        <li><a href="https://www.linkedin.com/in/eoghan-russell-774bb2171/">LinkedIn</a></li>
                     </ul>
                     <p>Or, you can send me an email - Eoghanrussell123@gmail.com</p>
                 </div>
