--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </section>
              <section id="projects">
                 <div class="section-inner">
-                    <img src="p1.png" class="p1-img">
+                    <img src="p1.PNG" class="p1-img">
                     <h2>Projects.</h2>
                     <p>Java Projects:</p>
                     <ul>
