--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<a class="navbar-brand" href="#"><img src="img/logo.png"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 		data-target="#navbarResponsive">
-	</div>div>
+	</div>
 
 <!--- Image Slider -->
 
