--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Navigation -->
 <nav class ="navbar naavbar-expand-md navbar-light bg-light sticky-top">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><img src="img/Galaxy.jpg"></a>
+		<a class="navbar-brand" href="#"><img src="img/logo.png"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 		data-target="#navbarResponsive">
 	</div>
