--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
 		<span class="navbar-toggler-icon"></span>
 	</button>
 	<div class="collapse navbar-collapse" id="navbarResponsive">
-	</div>
 	<ul class="navbar-nav ml-auto">
 		<li class="nav-item">
-			<a class="nav-link" href="#">Home</a>
+			<a class="nav-link" href="#slides">Home</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="#">About</a>
+			<a class="nav-link" href="#welcome">About</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="#">Projects</a>
+			<a class="nav-link" href="#projects">Projects</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="#">Connect</a>
+			<a class="nav-link" href="#connect">Connect</a>
 		</li>
 	</ul>
+	</div>
 </div>
 </nav>
 
@@ -53,8 +53,6 @@
 			<div class="carousel-caption">
 				<h1 class="display-2">BootStrap</h1>
 				<h3>Complete website layout</h3>
-				<button type="button" class="btn btn-outline-light btn-lg">VIEW DEMO</button>
-				<button type="button" class="btn btn-primary btn-lg">Get Started</button>
 			</div>
 		</div>
 		<div class="carousel-item">
@@ -63,7 +61,6 @@
 		<div class="carousel-item">
 			<img src="img/background3.png">
 		</div>
-	</div>
 </div>
 </div>
 
@@ -71,34 +68,156 @@
 
 
 <!--- Welcome Section -->
-
+<div id="welcome" class="container-fluid padding">
+	<div class="row welcome text-center">
+		<div class="col-12">
+			<h1 class="display-4">Eoghan Russell.</h1>
+		</div>
+		<hr>
+		<div class="col-12">
+			<p class="lead">Welcome to my website!</p>
+	</div>
+</div>
 
 <!--- Three Column Section -->
-
-
+<div class="container-fluid padding">
+<div class ="row text-center padding">
+	<div class="col-xs-12 col-sm-6 col-md-4">
+		<i class="fas fa-code"></i>
+		<h3>HTML5</h3>
+		<p>Built with the latest version of HTML5.</p>
+	</div>
+	<div class="col-xs-12 col-sm-6 col-md-4">
+		<i class="fas fa-bold"></i>
+		<h3>BOOTSTRAP</h3>
+		<p>Built with the latest version of Bootstrap, Bootstrap 4..</p>
+	</div>
+	<div class="col-sm-12 col-md-4">
+		<i class="fab fa-css3"></i>
+		<h3>CSS3</h3>
+		<p>Built with the latest version of CSS, CSS3.</p>
+	</div>
+</div>
+<hr class="my-4">
+</div>
 <!--- Two Column Section -->
+<div class="container-fluid padding">
+<div class="row padding">
+	<div class="col-lg-6">
+		<h2>If you build it...</h2>
+		<p>paragraphs and paragraphs</p>
+		<br>
+		<a href="#" class="btn btn-primary">Learn More</a>
+	</div>
+	<div class="col-lg-6">
+		<img src="img/desk.png" class="img-fluid">
+	</div>
+</div>
+</div>
 
-
+<hr class="my-4">
 <!--- Fixed background -->
-
-
-<!--- Emoji Section -->
-
+<figure>
+	<div class="fixed-wrap">
+		<div id="fixed">
+		</div>
+	</div>
+</figure>
   
-<!--- Meet the team -->
-
+<!--- Projects -->
+<div id= "projects" class="container-fluid padding">
+<div cass="row welcome text-center">
+	<div class="col-12">
+		<h1 class="display-4">Projects</h1>
+	</div>
+	<hr>
+</div>
+</div>
 
 <!--- Cards -->
-
+<div class="container-fluid padding">
+<div class="row padding">
+	<div class="col-md-4">
+		<div class="card">
+			<img class="card-img-top" src="img/team1.png">
+			<div class="card-body">
+				<h4 class="card-title">Java Projects</h4>
+				<p class="card-text">Blah blah blah</p>
+				<a href="#" class="btn btn-outline-secondary">See More</a>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="card">
+			<img class="card-img-top" src="img/team2.png">
+			<div class="card-body">
+				<h4 class="card-title">C++ Projects</h4>
+				<p class="card-text">Blah blah blah</p>
+				<a href="#" class="btn btn-outline-secondary">See More</a>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="card">
+			<img class="card-img-top" src="img/team3.png">
+			<div class="card-body">
+				<h4 class="card-title">Other Projects</h4>
+				<p class="card-text">Blah blah blah</p>
+				<a href="#" class="btn btn-outline-secondary">See More</a>
+			</div>
+		</div>
+	</div>
+</div>
+</div>
 
 <!--- Two Column Section -->
+<div class="container-fluid padding">
+<div class="row padding">
+	<div class="col-lg-6">
+		<h2>Other</h2>
+		<p>paragraphs and paragraphs</p>
 
+		<br>
+	</div>
+	<div class="col-lg-6">
+		<img src="img/bootstrap2.png" class="img-fluid">
+	</div>
+</div>
+<hr class="my-4">
+</div>
 
 <!--- Connect -->
-
+<div id="connect" class="container-fluid padding">
+<div class="row text-center padding">
+	<div class="col-12">
+		<h2>Connect</h2>
+	</div>
+	<div class="col-12 social padding">
+		<a href="#"><i class="fab fa-facebook"></i></a>
+		<a href="#"><i class="fab fa-instagram"></i></a>
+		<a href="#"><i class="fab fa-linkedin"></i></a>
+	</div>
+</div>
+</div>
 
 <!--- Footer -->
-
+<footer>
+<div class="container-fluid padding">
+<div class="row text-center">
+	<div class="col-md-12">
+		<a href="#" class="btn btn-primary">Back to Top</a>
+		<hr class="light">
+		<h5>Done with bootstrap4</h5>
+		<hr class="light">
+		<p>eoghanrussell123@gmail.com</p>
+	</div>
+	<div class="col-12">
+		<hr class="light-100">
+		<h5>&copy; Copyright 2019</h5>
+	</div>
+</div>
+</div>
+</footer>
 
 
 
