--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 			<a class="nav-link" href="#welcome">About</a>
 		</li>
 		<li class="nav-item">
+			<a class="nav-link" href="#skills">Skills & Abilities</a>
+		</li>
+		<li class="nav-item">
 			<a class="nav-link" href="#projects">Projects</a>
 		</li>
 		<li class="nav-item">
@@ -49,17 +52,19 @@
 	</ul>
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			<img src="img/background.png">
+			<img src="img/family.jpg">
 			<div class="carousel-caption">
-				<h1 class="display-2">BootStrap</h1>
-				<h3>Complete website layout</h3>
+				<h3>Lets kick things off.</h3>
 			</div>
 		</div>
 		<div class="carousel-item">
-			<img src="img/background2.png">
+			<video width="100%" height="400" controls muted>
+				<source src="img/routine.mp4"
+				type="video/mp4">
+			</video>
 		</div>
 		<div class="carousel-item">
-			<img src="img/background3.png">
+			<img src="img/medal.jpg" alt="medals" height="200" width="200">
 		</div>
 </div>
 </div>
@@ -71,36 +76,43 @@
 <div id="welcome" class="container-fluid padding">
 	<div class="row welcome text-center">
 		<div class="col-12">
-			<h1 class="display-4">Eoghan Russell.</h1>
+			<h1 class="display-4">Welcome!</h1>
 		</div>
 		<hr>
 		<div class="col-12">
-			<p class="lead">Welcome to my website!</p>
+			<p class="lead">Eoghan Russell - UL Games Development Student</p>
 	</div>
 </div>
+
+<div id="skills" class="container-fluid padding">
+	<div class="row welcome text-center">
+		<p>Need to write here etc.</p>
+	</div>
+	<hr>
+	</div>
 
 <!--- Three Column Section -->
 <div class="container-fluid padding">
 <div class ="row text-center padding">
 	<div class="col-xs-12 col-sm-6 col-md-4">
-		<i class="fas fa-code"></i>
-		<h3>HTML5</h3>
-		<p>Built with the latest version of HTML5.</p>
+		<i class='fab fa-java' style='font-size: 48px'></i>
+		<h3>Java</h3>
+		<p>Java is the language I currently have the most experience with due to it being the primary language in first year. I have created college and personal projects in it. I’m also able to use JUnit to test programs and/or create a project using the test-driven development method.</p>
 	</div>
 	<div class="col-xs-12 col-sm-6 col-md-4">
 		<i class="fas fa-bold"></i>
-		<h3>BOOTSTRAP</h3>
-		<p>Built with the latest version of Bootstrap, Bootstrap 4..</p>
+		<h3>C/C++</h3>
+		<p>I have some C experience from first semester of second year, and some basic knowledge of C++.</p>
 	</div>
 	<div class="col-sm-12 col-md-4">
 		<i class="fab fa-css3"></i>
-		<h3>CSS3</h3>
-		<p>Built with the latest version of CSS, CSS3.</p>
+		<h3>MYSQL</h3>
+		<p>MYSQL was part of my course in first semester of second year, I have worked on a group project that involved creating a database for a plausible imaginary system.</p>
 	</div>
 </div>
 <hr class="my-4">
 </div>
-<!--- Two Column Section -->
+<!--- Two Column Section
 <div class="container-fluid padding">
 <div class="row padding">
 	<div class="col-lg-6">
@@ -114,8 +126,9 @@
 	</div>
 </div>
 </div>
-
 <hr class="my-4">
+-->
+
 <!--- Fixed background -->
 <figure>
 	<div class="fixed-wrap">
@@ -126,7 +139,7 @@
   
 <!--- Projects -->
 <div id= "projects" class="container-fluid padding">
-<div cass="row welcome text-center">
+<div class="row welcome text-center">
 	<div class="col-12">
 		<h1 class="display-4">Projects</h1>
 	</div>
@@ -139,30 +152,30 @@
 <div class="row padding">
 	<div class="col-md-4">
 		<div class="card">
-			<img class="card-img-top" src="img/team1.png">
+			<img class="card-img-top" src="img/pro1.PNG">
 			<div class="card-body">
-				<h4 class="card-title">Java Projects</h4>
-				<p class="card-text">Blah blah blah</p>
+				<h4 class="card-title">League Management</h4>
+				<p class="card-text">This program prompts the admin to login, each admin can have multiple leagues, once an admin is logged in they can manage their leagues by selecting different options.</p>
 				<a href="#" class="btn btn-outline-secondary">See More</a>
 			</div>
 		</div>
 	</div>
 	<div class="col-md-4">
 		<div class="card">
-			<img class="card-img-top" src="img/team2.png">
+			<img class="card-img-top" src="img/pro2.PNG">
 			<div class="card-body">
-				<h4 class="card-title">C++ Projects</h4>
-				<p class="card-text">Blah blah blah</p>
+				<h4 class="card-title">Facility Management</h4>
+				<p class="card-text">This program first makes sure all bookings and decommissioned facilities are still valid by comparing their date with current date, and then allows a user to login, there are two type of users an admin and a regular user, both having different options.</p>
 				<a href="#" class="btn btn-outline-secondary">See More</a>
 			</div>
 		</div>
 	</div>
 	<div class="col-md-4">
 		<div class="card">
-			<img class="card-img-top" src="img/team3.png">
+			<img class="card-img-top" src="img/pro3.PNG">
 			<div class="card-body">
-				<h4 class="card-title">Other Projects</h4>
-				<p class="card-text">Blah blah blah</p>
+				<h4 class="card-title">Vending Machine</h4>
+				<p class="card-text">This program simulates a vending machine, the program first reads the data from files into the program, then prompts the user to choose if they want a CLI or a GUI menu, and then show the menu with options to the user.</p>
 				<a href="#" class="btn btn-outline-secondary">See More</a>
 			</div>
 		</div>
@@ -170,7 +183,7 @@
 </div>
 </div>
 
-<!--- Two Column Section -->
+<!--- Two Column Section.
 <div class="container-fluid padding">
 <div class="row padding">
 	<div class="col-lg-6">
@@ -185,6 +198,7 @@
 </div>
 <hr class="my-4">
 </div>
+-->
 
 <!--- Connect -->
 <div id="connect" class="container-fluid padding">
@@ -219,6 +233,12 @@
 </div>
 </footer>
 
+ <script src="../../dist/js/bootstrap.min.js"></script>  
+ <script>
+  $('.carousel').carousel({
+   interval: 50000
+  });
+ </script> 
 
 
 </body>
