--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+	<script src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"></script>
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
@@ -100,12 +100,12 @@
 		<p>Java is the language I currently have the most experience with due to it being the primary language in first year. I have created college and personal projects in it. I’m also able to use JUnit to test programs and/or create a project using the test-driven development method.</p>
 	</div>
 	<div class="col-xs-12 col-sm-6 col-md-4">
-		<i class="fas fa-bold"></i>
+		<i class="far fa-file" style='font-size: 44px'></i>
 		<h3>C/C++</h3>
 		<p>I have some C experience from first semester of second year, and some basic knowledge of C++.</p>
 	</div>
 	<div class="col-sm-12 col-md-4">
-		<i class="fab fa-css3"></i>
+		<i class="fa fa-database" style='font-size: 44px'></i>
 		<h3>MYSQL</h3>
 		<p>MYSQL was part of my course in first semester of second year, I have worked on a group project that involved creating a database for a plausible imaginary system.</p>
 	</div>
