--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	</div>
 </div>
 
-<div id="skills" class="container-fluid padding">
+<div class="container-fluid padding">
 	<div class="row welcome text-center">
 		<p>Need to write here etc.</p>
 	</div>
@@ -92,8 +92,12 @@
 	</div>
 
 <!--- Three Column Section -->
-<div class="container-fluid padding">
-<div class ="row text-center padding">
+<div id = "skills" class="container-fluid padding">
+<div class ="row welcome text-center padding">
+	<div class="col-12">
+		<h1 class="display-4">Skills & Abilities</h1>
+	</div>
+	<hr>
 	<div class="col-xs-12 col-sm-6 col-md-4">
 		<i class='fab fa-java' style='font-size: 48px'></i>
 		<h3>Java</h3>
@@ -181,6 +185,7 @@
 		</div>
 	</div>
 </div>
+<hr>
 </div>
 
 <!--- Two Column Section.
