--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 			<div class="card-body">
 				<h4 class="card-title">League Management</h4>
 				<p class="card-text">This program prompts the admin to login, each admin can have multiple leagues, once an admin is logged in they can manage their leagues by selecting different options.</p>
-				<a href="#" class="btn btn-outline-secondary">See More</a>
+				<a href="https://github.com/roszar351/Leagues_Program" class="btn btn-outline-secondary">See More</a>
 			</div>
 		</div>
 	</div>
@@ -170,7 +170,7 @@
 			<div class="card-body">
 				<h4 class="card-title">Facility Management</h4>
 				<p class="card-text">This program first makes sure all bookings and decommissioned facilities are still valid by comparing their date with current date, and then allows a user to login, there are two type of users an admin and a regular user, both having different options.</p>
-				<a href="#" class="btn btn-outline-secondary">See More</a>
+				<a href="https://github.com/roszar351/Facilities_Program" class="btn btn-outline-secondary">See More</a>
 			</div>
 		</div>
 	</div>
@@ -180,7 +180,7 @@
 			<div class="card-body">
 				<h4 class="card-title">Vending Machine</h4>
 				<p class="card-text">This program simulates a vending machine, the program first reads the data from files into the program, then prompts the user to choose if they want a CLI or a GUI menu, and then show the menu with options to the user.</p>
-				<a href="#" class="btn btn-outline-secondary">See More</a>
+				<a href="https://github.com/roszar351/Vending_Machine" class="btn btn-outline-secondary">See More</a>
 			</div>
 		</div>
 	</div>
@@ -212,9 +212,9 @@
 		<h2>Connect</h2>
 	</div>
 	<div class="col-12 social padding">
-		<a href="#"><i class="fab fa-facebook"></i></a>
-		<a href="#"><i class="fab fa-instagram"></i></a>
-		<a href="#"><i class="fab fa-linkedin"></i></a>
+		<a href="https://www.facebook.com/eoghan.russell.7"><i class="fab fa-facebook"></i></a>
+		<a href="https://www.instagram.com/eoghan_russell121/?hl=en"><i class="fab fa-instagram"></i></a>
+		<a href="https://www.linkedin.com/in/eoghan-russell-774bb2171/"><i class="fab fa-linkedin"></i></a>
 	</div>
 </div>
 </div>
