--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
 		</div>
 		<hr>
 		<div class="col-12">
-			<p class="lead">Eoghan Russell - UL Games Development Student</p>
+			<p class="lead">UL Games Development Student</p>
 	</div>
 </div>
 
 <div class="container-fluid padding">
 	<div class="row welcome text-center">
-		<p>Need to write here etc.</p>
+		<p>Hello, I'm Eoghan Russell. I'm currently a second year student(as of 2018/2019) in Computer Games Development at University of Limerick. I always enjoyed mathematics, problem solving and gaming, so programming seemed to be a logical choice for me and since starting college I got really hooked into it. My passion for learning led me into creating this website. I am currently Treasurer of the Trampoline & Gymnastics club in UL. I enjoy socialising and working with others to get tasks complete.</p>
 	</div>
 	<hr>
 	</div>
