--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
 		<h3>MYSQL</h3>
 		<p>MYSQL was part of my course in first semester of second year, I have worked on a group project that involved creating a database for a plausible imaginary system.</p>
 	</div>
+	<div class="col-sm-12 col-md-4">
+		<i class="fas fa-code" style='font-size: 44px'></i>
+		<h3>HTML</h3>
+		<p>I am completely self-thought in this language. I have some experience in HTML & CSS from creating and designing this website.</p>
+	</div>
 </div>
 <hr class="my-4">
 </div>
