--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 <div class="container-fluid padding">
 <div class="row text-center">
 	<div class="col-md-12">
-		<a href="#" class="btn btn-primary">Back to Top</a>
+		<a href="#slides" class="btn btn-primary">Back to Top</a>
 		<hr class="light">
 		<h5>Done with bootstrap4</h5>
 		<hr class="light">
