--- a/index.html
+++ b/index.html
@@ -231,8 +231,9 @@
 	<div class="col-md-12">
 		<a href="#" class="btn btn-primary">Back to Top</a>
 		<hr class="light">
-		<h5>Done with bootstrap4</h5>
+		<h6>Done with bootstrap4</h6>
 		<hr class="light">
+		<p>If you have any feedback, shoot me an email!</p>
 		<p>eoghanrussell123@gmail.com</p>
 	</div>
 	<div class="col-12">
