--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Eoghan Russell</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"></script>
@@ -13,13 +14,12 @@
 </head>
 <body>
 
-<!-- Scroll animation -->
 <script>
 		$(document).ready(function(){
 			if($(window).width()< 768) {
 				var vheight = $(window).height();
 				vheight = vheight * 0.94;
-				$("slides").height(vheight);
+				$("#welcome-section").height(vheight);
 			}
 			$('a[href^="#"]').click(function(event) {
 				var id = $(this).attr("href");
