--- a/index.html
+++ b/index.html
@@ -33,18 +33,15 @@
 		</script>
 
 <!-- Navigation -->
-<nav class ="navbar navbar-expand-md navbar-light bg-light sticky-top">
+<nav class ="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#">Eoghan Russell</a>
+		<a class="navbar-brand" href="#welcome">Eoghan Russell</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 		data-target="#navbarResponsive">
 		<span class="navbar-toggler-icon"></span>
 	</button>
 	<div class="collapse navbar-collapse" id="navbarResponsive">
 	<ul class="navbar-nav ml-auto">
-		<li class="nav-item">
-			<a class="nav-link" href="#slides">Home</a>
-		</li>
 		<li class="nav-item">
 			<a class="nav-link" href="#welcome">About</a>
 		</li>
@@ -57,12 +54,15 @@
 		<li class="nav-item">
 			<a class="nav-link" href="#connect">Connect</a>
 		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="images.html">Images</a>
+		</li>
 	</ul>
 	</div>
 </div>
 </nav>
 
-<!--- Image Slider -->
+<!--- Image Slider 
 <div id="slides" class="carousel slide" data-ride="carousel">
 	<ul class="carousel-indicators">
 		<li data-target="#slides" data-slide-to="0" class ="active"></li>
@@ -87,7 +87,7 @@
 		</div>
 </div>
 </div>
-
+-->
 <!--- Jumbotron -->
 
 
@@ -134,7 +134,7 @@
 	</div>
 	<div class="col-sm-12 col-md-4">
 		<i class="fas fa-code" style='font-size: 44px'></i>
-		<h3>HTML</h3>
+		<h3>HTML & CSS</h3>
 		<p>I am completely self-thought in this language. I have some experience in HTML & CSS from creating and designing this website.</p>
 	</div>
 </div>
@@ -182,7 +182,7 @@
 		<div class="card">
 			<img class="card-img-top" src="img/Pro1.PNG">
 			<div class="card-body">
-				<h4 class="card-title">League Management</h4>
+				<h4 class="card-title">League Management - Java</h4>
 				<p class="card-text">This program prompts the admin to login, each admin can have multiple leagues, once an admin is logged in they can manage their leagues by selecting different options.</p>
 				<a href="https://github.com/roszar351/Leagues_Program" class="btn btn-outline-secondary">See More</a>
 			</div>
@@ -192,7 +192,7 @@
 		<div class="card">
 			<img class="card-img-top" src="img/pro2.PNG">
 			<div class="card-body">
-				<h4 class="card-title">Facility Management</h4>
+				<h4 class="card-title">Facility Management - Java</h4>
 				<p class="card-text">This program first makes sure all bookings and decommissioned facilities are still valid by comparing their date with current date, and then allows a user to login, there are two type of users an admin and a regular user, both having different options.</p>
 				<a href="https://github.com/roszar351/Facilities_Program" class="btn btn-outline-secondary">See More</a>
 			</div>
@@ -202,9 +202,49 @@
 		<div class="card">
 			<img class="card-img-top" src="img/pro3.PNG">
 			<div class="card-body">
-				<h4 class="card-title">Vending Machine</h4>
+				<h4 class="card-title">Vending Machine - Java</h4>
 				<p class="card-text">This program simulates a vending machine, the program first reads the data from files into the program, then prompts the user to choose if they want a CLI or a GUI menu, and then show the menu with options to the user.</p>
 				<a href="https://github.com/roszar351/Vending_Machine" class="btn btn-outline-secondary">See More</a>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="card">
+			<img class="card-img-top" src="img/pro3.PNG">
+			<div class="card-body">
+				<h4 class="card-title">Fruitoidal - Unity/C#</h4>
+				<p class="card-text">This was made using the unity game engine for GamesFleadh 2019.</p>
+				<a href="https://github.com/roszar351/Vending_Machine" class="btn btn-outline-secondary">See More</a>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="card">
+			<img class="card-img-top" src="img/pro2.PNG">
+			<div class="card-body">
+				<h4 class="card-title">EDIT</h4>
+				<p class="card-text">EDIT.</p>
+				<a href="https://github.com/roszar351/Facilities_Program" class="btn btn-outline-secondary">See More</a>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="card">
+			<img class="card-img-top" src="img/pro2.PNG">
+			<div class="card-body">
+				<h4 class="card-title">EDIT</h4>
+				<p class="card-text">EDIT.</p>
+				<a href="https://github.com/roszar351/Facilities_Program" class="btn btn-outline-secondary">See More</a>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="card">
+			<img class="card-img-top" src="img/pro2.PNG">
+			<div class="card-body">
+				<h4 class="card-title">EDIT</h4>
+				<p class="card-text">EDIT.</p>
+				<a href="https://github.com/roszar351/Facilities_Program" class="btn btn-outline-secondary">See More</a>
 			</div>
 		</div>
 	</div>
@@ -212,17 +252,29 @@
 <hr>
 </div>
 
-<!--- Two Column Section.
+
+<!-- Other Projects
+<div id= "projects" class="container-fluid padding">
+	<div class="row welcome text-center">
+		<div class="col-12">
+			<h1 class="display-4">Other Projects</h1>
+		</div>
+		<hr>
+	</div>
+	</div>
+-->
+
+<!--- Two Column Section. 
 <div class="container-fluid padding">
 <div class="row padding">
 	<div class="col-lg-6">
-		<h2>Other</h2>
-		<p>paragraphs and paragraphs</p>
+		<h2>Fruitoidal</h2>
+		<p>This was made using the unity game engine for GamesFleadh 2019.</p>
 
 		<br>
 	</div>
 	<div class="col-lg-6">
-		<img src="img/bootstrap2.png" class="img-fluid">
+		<img src="img/Fruitoidal.jpg" class="img-fluid">
 	</div>
 </div>
 <hr class="my-4">
@@ -248,7 +300,7 @@
 <div class="container-fluid padding">
 <div class="row text-center">
 	<div class="col-md-12">
-		<a href="#slides" class="btn btn-primary">Back to Top</a>
+		<a href="#welcome" class="btn btn-primary">Back to Top</a>
 		<hr class="light">
 		<h6>Done with bootstrap4</h6>
 		<hr class="light">
@@ -265,8 +317,6 @@
 
 </body>
 </html>
-
- <a href="#0" class="cd-top js-cd-top">Top</a>
 
 
 
