--- a/index.html
+++ b/index.html
@@ -95,12 +95,9 @@
 <div id="welcome" class="container-fluid padding">
 	<div class="row welcome text-center">
 		<div class="col-12">
-			<h1 class="display-4">Welcome!</h1>
-		</div>
-		<hr>
-		<div class="col-12">
-			<p class="lead">UL Games Development Student</p>
+			<h2 class="display-3">About</h2>
 	</div>
+	<hr>
 </div>
 
 <div class="container-fluid padding">
@@ -114,7 +111,7 @@
 <div id = "skills" class="container-fluid padding">
 <div class ="row welcome text-center padding">
 	<div class="col-12">
-		<h1 class="display-4">Skills & Abilities</h1>
+		<h1 class="display-3">Skills & Abilities</h1>
 	</div>
 	<hr>
 	<div class="col-xs-12 col-sm-6 col-md-4">
@@ -137,6 +134,16 @@
 		<h3>HTML & CSS</h3>
 		<p>I am completely self-thought in this language. I have some experience in HTML & CSS from creating and designing this website.</p>
 	</div>
+	<div class="col-sm-12 col-md-4">
+		<i class="fas fa-people-carry" style='font-size: 44px'></i>
+		<h3>Teamwork</h3>
+		<p>Many of my college projects required working in a team environment. I also also worked as part of a team in game jams and other events. I have found teamwork to be very important in getting tasks complete, splitting up the workload and assigning responsibilities to the right person. </p>
+	</div>
+	<div class="col-sm-12 col-md-4">
+		<i class="fab fa-python" style='font-size: 44px'></i>
+		<h3>Python</h3>
+		<p>I have started to learn this language in my spare time. I have started with a few basic programs to familiarise myself with it and have a snake game.</p>
+	</div>
 </div>
 <hr class="my-4">
 </div>
@@ -157,19 +164,20 @@
 <hr class="my-4">
 -->
 
-<!--- Fixed background -->
+<!--- Fixed background 
 <figure>
 	<div class="fixed-wrap">
 		<div id="fixed">
 		</div>
 	</div>
 </figure>
-  
+  -->
+
 <!--- Projects -->
 <div id= "projects" class="container-fluid padding">
 <div class="row welcome text-center">
 	<div class="col-12">
-		<h1 class="display-4">Projects</h1>
+		<h1 class="display-3">Projects</h1>
 	</div>
 	<hr>
 </div>
@@ -317,12 +325,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
- 
-
