--- a/images.html
+++ b/images.html
@@ -4,6 +4,6 @@
     </head>
 
     <body class="class-for-index">
-        <h1> Welcome to my images </h1>
+        <h1> Work In Progress. </h1>
     </body>
 </html>
