--- a/index.html
+++ b/index.html
@@ -173,6 +173,27 @@
 </figure>
   -->
 
+<div class="container-fluid padding">
+<div class="row welcome text-center">
+	<a name="events"></a>
+	<div class="col-12">
+		<h1 class="display-3">Events & Achievements</h1>
+		<hr>
+		<p>I have received two letters of academic achievement from the President of UL for achieving QCA over 3.6 in my first
+		   year exams. I am part of the Games Development Society in UL and have taken part in game jams to create games in unity! I also took part in the <a href="https://www.facebook.com/ACIFooBarChallenge/">ACIFooBarChallenge</a>
+		  , in which we had to solve coding challenges in teams of three using java and my team took first place!.
+		</p>
+		<p>I became a member of the UL Trampoline & Gymnastics club in first year and took a huge interest, going to competitions across Ireland to compete and to meet new people was very beneficial for myself! I currently compete at Advanced level. I became the Treasurer of the club by second year, I was responsible for budgeting, payment and overall money management.
+		</p>
+		<p>
+			In 2019 I participated in a team of four in <a href="http://gamesfleadh.ie/">Gamesfleadh</a>, the theme was platformers,
+			unfortunately we didnt win anything but it was a great experience, learning how to create a game from scratch and seeing what other groups had come up with. We also got a lot of feedback from people in industry on what we could improve on. We got to listen to talks from industries which was interesting. 
+		</p>
+		<br>
+	</div>
+</div>
+</div>
+
 <!--- Projects -->
 <div id= "projects" class="container-fluid padding">
 <div class="row welcome text-center">
@@ -192,7 +213,7 @@
 			<div class="card-body">
 				<h4 class="card-title">League Management - Java</h4>
 				<p class="card-text">This program prompts the admin to login, each admin can have multiple leagues, once an admin is logged in they can manage their leagues by selecting different options.</p>
-				<a href="https://github.com/roszar351/Leagues_Program" class="btn btn-outline-secondary">See More</a>
+				<a href="https://github.com/Eoghan1232/Leagues_Program" class="btn btn-outline-secondary">See More</a>
 			</div>
 		</div>
 	</div>
@@ -202,7 +223,7 @@
 			<div class="card-body">
 				<h4 class="card-title">Facility Management - Java</h4>
 				<p class="card-text">This program first makes sure all bookings and decommissioned facilities are still valid by comparing their date with current date, and then allows a user to login, there are two type of users an admin and a regular user, both having different options.</p>
-				<a href="https://github.com/roszar351/Facilities_Program" class="btn btn-outline-secondary">See More</a>
+				<a href="https://github.com/Eoghan1232/Facilities_Program" class="btn btn-outline-secondary">See More</a>
 			</div>
 		</div>
 	</div>
@@ -212,27 +233,27 @@
 			<div class="card-body">
 				<h4 class="card-title">Vending Machine - Java</h4>
 				<p class="card-text">This program simulates a vending machine, the program first reads the data from files into the program, then prompts the user to choose if they want a CLI or a GUI menu, and then show the menu with options to the user.</p>
-				<a href="https://github.com/roszar351/Vending_Machine" class="btn btn-outline-secondary">See More</a>
+				<a href="https://github.com/Eoghan1232/Vending_Machine" class="btn btn-outline-secondary">See More</a>
 			</div>
 		</div>
 	</div>
+
+<!-- Other section -->
+<div class="container-fluid padding">
+<div class="row text-center">
+	<div class="col-12">
+		<h1>Other</h1>
+	</div>
+</div>
+</div>
+	
 	<div class="col-md-4">
 		<div class="card">
-			<img class="card-img-top" src="img/pro3.PNG">
+			<img class="card-img-top" src="img/fruitoidal.png">
 			<div class="card-body">
-				<h4 class="card-title">Fruitoidal - Unity/C#</h4>
+				<h4 class="card-title">Fruitoidal(GamesFleadh) - Unity/C#</h4>
 				<p class="card-text">This was made using the unity game engine for GamesFleadh 2019.</p>
-				<a href="https://github.com/roszar351/Vending_Machine" class="btn btn-outline-secondary">See More</a>
-			</div>
-		</div>
-	</div>
-	<div class="col-md-4">
-		<div class="card">
-			<img class="card-img-top" src="img/pro2.PNG">
-			<div class="card-body">
-				<h4 class="card-title">EDIT</h4>
-				<p class="card-text">EDIT.</p>
-				<a href="https://github.com/roszar351/Facilities_Program" class="btn btn-outline-secondary">See More</a>
+				<a href="https://roszar351.itch.io/fruitoidal" class="btn btn-outline-secondary">See More</a>
 			</div>
 		</div>
 	</div>
@@ -257,7 +278,7 @@
 		</div>
 	</div>
 </div>
-<hr>
+</div>
 </div>
 
 
