--- a/index.html
+++ b/index.html
@@ -259,15 +259,15 @@
 	</div>
 	<div class="col-md-4">
 		<div class="card">
-			<img class="card-img-top" src="img/pro2.PNG">
+			<img class="card-img-top" src="img/bloon_huntr.png">
 			<div class="card-body">
-				<h4 class="card-title">EDIT</h4>
-				<p class="card-text">EDIT.</p>
-				<a href="https://github.com/roszar351/Facilities_Program" class="btn btn-outline-secondary">See More</a>
+				<h4 class="card-title">Bloon-Huntr</h4>
+				<p class="card-text">This was made using the unity game engine for a game Jam. Its a 2 person game where one person attempts to knock down the other.</p>
+				<a href="https://roszar351.itch.io/bloon-huntr" class="btn btn-outline-secondary">See More</a>
 			</div>
 		</div>
 	</div>
-	
+
 </div>
 </div>
 </div>
