Updates to Images Section.

--- a/images.html
+++ b/images.html
@@ -1,9 +1,52 @@
 <html>
     <head>
+    	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link href="style.css" rel="stylesheet">
     </head>
 
     <body class="class-for-index">
-        <h1> Work In Progress. </h1>
+        <a class="btn btn-outline-secondary" href="index.html">Back</a>
+
+        <div id= "projects" class="container-fluid padding">
+<div class="row welcome text-center">
+	<div class="col-12">
+		<h1 class="display-3">Images</h1>
+	</div>
+	<hr>
+</div>
+</div>
+
+<!--- Cards -->
+<div class="container-fluid padding">
+<div class="row padding">
+	<div class="col-md-4">
+		<div class="card">
+			<img class="card-img-top" src="img/medal.jpg">
+			<div class="card-body">
+				<h4 class="card-title">First place Synchro roulette</h4>
+				<p class="card-text">Myself and my teammate Mark won Gold at intervarsities 2019 in Cork.</p>
+			</div>
+		</div>
+	</div>
+<div class="col-md-4">
+		<div class="card">
+			<img class="card-img-top" src="img/foobar.jpg">
+			<div class="card-body">
+				<h4 class="card-title">ACI FooBar Challenge 2019.</h4>
+				<p class="card-text">My Team won first place at this coding competition against other teams from various colleges.</p>
+			</div>
+		</div>
+	</div>
+	<!---
+	<div class="col-md-4">
+		<div class="card">
+			<img class="card-img-top" src="img/">
+			<div class="card-body">
+				<h4 class="card-title">Edit.</h4>
+				<p class="card-text">Edit.</p>
+			</div>
+		</div>
+	</div>
+-->
     </body>
 </html>
