Updates to Image Section.

--- a/images.html
+++ b/images.html
@@ -37,16 +37,15 @@
 			</div>
 		</div>
 	</div>
-	<!---
 	<div class="col-md-4">
 		<div class="card">
-			<img class="card-img-top" src="img/">
+			<img class="card-img-top" src="img/noBrace.jpg">
 			<div class="card-body">
-				<h4 class="card-title">Edit.</h4>
-				<p class="card-text">Edit.</p>
+				<h4 class="card-title">The Day i got my Braces out.</h4>
+				<p class="card-text">I can smile now(WooHoo!).</p>
 			</div>
 		</div>
 	</div>
--->
+
     </body>
 </html>
