--- a/images.html
+++ b/images.html
@@ -5,12 +5,13 @@
     </head>
 
     <body class="class-for-index">
-        <a class="btn btn-outline-secondary" href="index.html">Back</a>
+     
 
         <div id= "projects" class="container-fluid padding">
 <div class="row welcome text-center">
 	<div class="col-12">
 		<h1 class="display-3">Images</h1>
+		 <a class="btn btn-outline-secondary" href="index.html">Home</a>
 	</div>
 	<hr>
 </div>
