--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 <div class="container-fluid padding">
 	<div class="row welcome text-center">
-		<p>Hello, I'm Eoghan Russell. I'm currently a second year student(as of 2018/2019) in Computer Games Development at University of Limerick. I always enjoyed mathematics, problem solving and gaming, so programming seemed to be a logical choice for me and since starting college I got really hooked into it. My passion for learning led me into creating this website. I am currently Treasurer of the Trampoline & Gymnastics club in UL. I enjoy socialising and working with others to get tasks complete.</p>
+		<p>Hello, I'm Eoghan Russell. I'm currently a second year student(as of 2018/2019) in Computer Games Development at University of Limerick. I have always enjoyed mathematics, problem solving and gaming, so programming seemed to be a logical choice for me and since starting college I have gotten really hooked into it. My passion for learning led me into creating this website. I am currently Treasurer of the Trampoline & Gymnastics club in UL. I enjoy socialising and working with others to get tasks complete.</p>
 	</div>
 	<hr>
 	</div>
@@ -137,7 +137,7 @@
 	<div class="col-sm-12 col-md-4">
 		<i class="fas fa-people-carry" style='font-size: 44px'></i>
 		<h3>Teamwork</h3>
-		<p>Many of my college projects required working in a team environment. I also also worked as part of a team in game jams and other events. I have found teamwork to be very important in getting tasks complete, splitting up the workload and assigning responsibilities to the right person. </p>
+		<p>Many of my college projects required working in a team environment. I also worked as part of a team in game jams and other events. I have found teamwork to be very important in getting tasks complete, splitting up the workload and assigning responsibilities to the right person. </p>
 	</div>
 	<div class="col-sm-12 col-md-4">
 		<i class="fab fa-python" style='font-size: 44px'></i>
@@ -181,13 +181,13 @@
 		<hr>
 		<p>I have received two letters of academic achievement from the President of UL for achieving QCA over 3.6 in my first
 		   year exams. I am part of the Games Development Society in UL and have taken part in game jams to create games in unity! I also took part in the <a href="https://www.facebook.com/ACIFooBarChallenge/">ACIFooBarChallenge</a>
-		  , in which we had to solve coding challenges in teams of three using java and my team took first place!.
+		  , in which we had to solve coding challenges in teams of three using java and my team took first place!
 		</p>
-		<p>I became a member of the UL Trampoline & Gymnastics club in first year and took a huge interest, going to competitions across Ireland to compete and to meet new people was very beneficial for myself! I currently compete at Advanced level. I became the Treasurer of the club by second year, I was responsible for budgeting, payment and overall money management.
+		<p>I became a member of the UL Trampoline & Gymnastics club in first year and took a huge interest.Since then i have been going to competitions across Ireland to compete and to meet new people was very beneficial for myself! I currently compete at Advanced level. I became the Treasurer of the club by second year and therefore I was responsible for budgeting, payment and overall money management.
 		</p>
 		<p>
-			In 2019 I participated in a team of four in <a href="http://gamesfleadh.ie/">Gamesfleadh</a>, the theme was platformers,
-			unfortunately we didnt win anything but it was a great experience, learning how to create a game from scratch and seeing what other groups had come up with. We also got a lot of feedback from people in industry on what we could improve on. We got to listen to talks from industries which was interesting. 
+			In 2019 I participated in a team of four in <a href="http://gamesfleadh.ie/">Gamesfleadh</a>, the theme was platformers.
+			Unfortunately we didnt win anything but it was a great experience where we learned how to create a game from scratch and saw what other groups had come up with. We also got a lot of feedback from people in industry on what we could improve on. We got to listen to talks from industries which was interesting. 
 		</p>
 		<br>
 	</div>
@@ -212,7 +212,7 @@
 			<img class="card-img-top" src="img/Pro1.PNG">
 			<div class="card-body">
 				<h4 class="card-title">League Management - Java</h4>
-				<p class="card-text">This program prompts the admin to login, each admin can have multiple leagues, once an admin is logged in they can manage their leagues by selecting different options.</p>
+				<p class="card-text">This program prompts the admin to login. Each admin can have multiple leagues and once an admin is logged in they can manage their leagues by selecting different options.</p>
 				<a href="https://github.com/Eoghan1232/Leagues_Program" class="btn btn-outline-secondary">See More</a>
 			</div>
 		</div>
@@ -222,7 +222,7 @@
 			<img class="card-img-top" src="img/pro2.PNG">
 			<div class="card-body">
 				<h4 class="card-title">Facility Management - Java</h4>
-				<p class="card-text">This program first makes sure all bookings and decommissioned facilities are still valid by comparing their date with current date, and then allows a user to login, there are two type of users an admin and a regular user, both having different options.</p>
+				<p class="card-text">This program first makes sure all bookings and decommissioned facilities are still valid by comparing their date with current date and then allows a user to login. There are two type of users an admin and a regular user, both having different options.</p>
 				<a href="https://github.com/Eoghan1232/Facilities_Program" class="btn btn-outline-secondary">See More</a>
 			</div>
 		</div>
@@ -232,7 +232,7 @@
 			<img class="card-img-top" src="img/pro3.PNG">
 			<div class="card-body">
 				<h4 class="card-title">Vending Machine - Java</h4>
-				<p class="card-text">This program simulates a vending machine, the program first reads the data from files into the program, then prompts the user to choose if they want a CLI or a GUI menu, and then show the menu with options to the user.</p>
+				<p class="card-text">This program simulates a vending machine. The program first reads the data from files into the program and then prompts the user to choose if they want a CLI or a GUI menu. Then the programs shows the menu with options to the user.</p>
 				<a href="https://github.com/Eoghan1232/Vending_Machine" class="btn btn-outline-secondary">See More</a>
 			</div>
 		</div>
