--- a/images.html
+++ b/images.html
@@ -42,7 +42,7 @@
 		<div class="card">
 			<img class="card-img-top" src="img/noBrace.jpg">
 			<div class="card-body">
-				<h4 class="card-title">The Day i got my Braces out.</h4>
+				<h4 class="card-title">The Day I got my Braces out.</h4>
 				<p class="card-text">I can smile now(WooHoo!).</p>
 			</div>
 		</div>
