--- a/images.html
+++ b/images.html
@@ -47,6 +47,19 @@
 			</div>
 		</div>
 	</div>
+	<div class="col-md-4">
+		<div class="card">
+			<video class="card-img-top" width="100%" height="400" controls muted>
+				<source src="img/routine.mp4"
+				type="video/mp4">
+			</video>
+
+			<div class="card-body">
+				<h4 class="card-title">Synchro Roulette.</h4>
+				<p class="card-text">This is the routine myself and Mark competed when we won gold.</p>
+			</div>
+		</div>
+	</div>
 
     </body>
 </html>
