--- a/images.html
+++ b/images.html
@@ -60,6 +60,19 @@
 			</div>
 		</div>
 	</div>
+	<div class="col-md-4">
+		<div class="card">
+			<video class="card-img-top" width="100%" height="400" controls muted>
+				<source src="img/firstFlip.mp4"
+				type="video/mp4">
+			</video>
+
+			<div class="card-body">
+				<h4 class="card-title">AirTrack first Flip.</h4>
+				<p class="card-text">This is the first time I landed a fron Tuck on the airtrack.</p>
+			</div>
+		</div>
+	</div>
 
     </body>
 </html>
