--- a/images.html
+++ b/images.html
@@ -22,7 +22,7 @@
 <div class="row padding">
 	<div class="col-md-4">
 		<div class="card">
-			<img class="card-img-top" src="img/medal.jpg">
+			<img class="card-img-top" src="img/medal.png">
 			<div class="card-body">
 				<h4 class="card-title">First place Synchro roulette</h4>
 				<p class="card-text">Myself and my teammate Mark won Gold at intervarsities 2019 in Cork.</p>
@@ -43,7 +43,7 @@
 			<img class="card-img-top" src="img/noBrace.jpg">
 			<div class="card-body">
 				<h4 class="card-title">The Day I got my Braces out.</h4>
-				<p class="card-text">I can smile now(WooHoo!).</p>
+				<p class="card-text">I can smile now(WooHoo!). This was at a competition in Belfast on a social night.(hence the glitter)</p>
 			</div>
 		</div>
 	</div>
