--- a/images.html
+++ b/images.html
@@ -10,7 +10,7 @@
         <div id= "projects" class="container-fluid padding">
 <div class="row welcome text-center">
 	<div class="col-12">
-		<h1 class="display-3">Images</h1>
+		<h1 class="display-3">Images & Videos</h1>
 		 <a class="btn btn-outline-secondary" href="index.html">Home</a>
 	</div>
 	<hr>
@@ -43,7 +43,7 @@
 			<img class="card-img-top" src="img/noBrace.jpg">
 			<div class="card-body">
 				<h4 class="card-title">The Day I got my Braces out.</h4>
-				<p class="card-text">I can smile now(WooHoo!). This was at a competition in Belfast on a social night.(hence the glitter)</p>
+				<p class="card-text">I can smile now(WooHoo!). This was at a competition in Belfast on a social night(hence the glitter).</p>
 			</div>
 		</div>
 	</div>
@@ -70,6 +70,15 @@
 			<div class="card-body">
 				<h4 class="card-title">AirTrack first Flip.</h4>
 				<p class="card-text">This is the first time I landed a fron Tuck on the airtrack.</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="card">
+			<img class="card-img-top" src="img/pirate.jpg">
+			<div class="card-body">
+				<h4 class="card-title">Pirate Duties.</h4>
+				<p class="card-text">When work requires you to dress up for a themed night, you have to go all out.</p>
 			</div>
 		</div>
 	</div>
