--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<a class="nav-link" href="#connect">Connect</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="images.html">Images</a>
+			<a class="nav-link" href="images.html">Gallery</a>
 		</li>
 	</ul>
 	</div>
