--- a/images.html
+++ b/images.html
@@ -1,14 +1,31 @@
 <html>
     <head>
-    	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-        <link href="style.css" rel="stylesheet">
+    <title>Eoghan Russell</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	<script src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link href="style.css" rel="stylesheet">
     </head>
+    <body>
 
-    <body class="class-for-index">
-     
+     <script>
+		$(document).ready(function(){
+			$('a[href^="#"]').click(function(event) {
+				var id = $(this).attr("href");
+				var offset = 40;
+				var target = $(id).offset().top - offset;
+				$('html, body').animate({scrollTop:target}, 400);
+
+				event.preventDefault();
+			});
+		});
+		</script>
 
         <div id= "projects" class="container-fluid padding">
-<div class="row welcome text-center">
+	<div class="row welcome text-center">
 	<div class="col-12">
 		<h1 class="display-3">Images & Videos</h1>
 		 <a class="btn btn-outline-secondary" href="index.html">Home</a>
@@ -82,6 +99,28 @@
 			</div>
 		</div>
 	</div>
+</div>
+
+
+<footer>
+<div class="container-fluid padding">
+<div class="row text-center">
+	<div class="col-md-12">
+		<a href="#projects" class="btn btn-primary">Back to Top</a>
+		<hr class="light">
+		<h6>Done with bootstrap4</h6>
+		<hr class="light">
+		<p>If you have any feedback, shoot me an email!</p>
+		<p>eoghanrussell123@gmail.com</p>
+	</div>
+	<div class="col-12">
+		<hr class="light-100">
+		<h6>&copy; Copyright 2019</h6>
+	</div>
+</div>
+</div>
+</footer>
+
 
     </body>
 </html>
