--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 </div>
 
 <div class="container-fluid padding">
-	<div class="row welcome text-center">
+	<div class="row welcome text-align">
 		<p>Hello, I'm Eoghan Russell. I'm currently a second year student(as of 2018/2019) in Computer Games Development at University of Limerick. I have always enjoyed mathematics, problem solving and gaming, so programming seemed to be a logical choice for me and since starting college I have gotten really hooked into it. My passion for learning led me into creating this website. I am currently Treasurer of the Trampoline & Gymnastics club in UL. I enjoy socialising and working with others to get tasks complete.</p>
 	</div>
 	<hr>
@@ -104,7 +104,7 @@
 
 <!--- Three Column Section -->
 <div id = "skills" class="container-fluid padding">
-<div class ="row welcome text-center padding">
+<div class ="row welcome text-align padding">
 	<div class="col-12">
 		<h1 class="display-3">Skills & Abilities</h1>
 	</div>
@@ -169,7 +169,7 @@
   -->
 
 <div class="container-fluid padding">
-<div class="row welcome text-center">
+<div class="row welcome text-align">
 	<a name="events"></a>
 	<div class="col-12">
 		<h1 class="display-3">Events & Achievements</h1>
