got rid of previous changes.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 <!--- Three Column Section -->
 <div id = "skills" class="container-fluid padding">
-<div class ="row welcome text-align padding">
+<div class ="row welcome text-center padding">
 	<div class="col-12">
 		<h1 class="display-3">Skills & Abilities</h1>
 	</div>
@@ -169,7 +169,7 @@
   -->
 
 <div class="container-fluid padding">
-<div class="row welcome text-align">
+<div class="row welcome text-center">
 	<a name="events"></a>
 	<div class="col-12">
 		<h1 class="display-3">Events & Achievements</h1>
