--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		<p>I have some C experience from first semester of second year, and some basic knowledge of C++.</p>
 	</div>
 	<div class="col-sm-12 col-md-4">
-		<i class="fa fa-database" style='font-size: 44px'></i>
+		<i class="fas fa-database" style='font-size: 44px'></i>
 		<h3>MYSQL</h3>
 		<p>MYSQL was part of my course in first semester of second year, I have worked on a group project that involved creating a database for a plausible imaginary system.</p>
 	</div>
