--- a/images.html
+++ b/images.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+    <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Gallery</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -101,6 +103,7 @@
 	</div>
 </div>
 </div>
+
 
 <footer>
 <div class="container-fluid padding">
