--- a/images.html
+++ b/images.html
@@ -94,6 +94,19 @@
 	</div>
 	<div class="col-md-4">
 		<div class="card">
+			<video class="card-img-top" width="100%" height="400" controls muted>
+				<source src="img/trainingVid.mp4"
+				type="video/mp4">
+			</video>
+
+			<div class="card-body">
+				<h4 class="card-title">Prepping for competitions.</h4>
+				<p class="card-text">This is the one of the first times I completed the routine when given it for an upcoming competition!</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="card">
 			<img class="card-img-top" src="img/pirate.jpg">
 			<div class="card-body">
 				<h4 class="card-title">Pirate Duties.</h4>
