--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 <div class="container-fluid padding">
 	<div class="row welcome text-align">
-		<p>Hello, I'm Eoghan Russelland I have a BSc in Computer Games Development from University of Limerick, I'm currently working as a Cloud Native Software Engineering Graduate at Intel Shannon. I have always enjoyed mathematics, problem solving <a href="https://github.com/Eoghan1232/Java_files/tree/master/Project_Euler">Euler Problems</a> in my spare time and gaming, so programming seemed to be a logical choice for me and since starting college I have gotten really hooked into it. My passion for learning led me into creating this website. I am currently Treasurer of the Trampoline & Gymnastics club in UL. I enjoy socialising and working with others to get tasks complete.</p>
+		<p>Hello, I'm Eoghan Russell and I have a BSc in Computer Games Development from University of Limerick, I'm currently working as a Cloud Orchestration Software Engineer at Intel Shannon. I have always enjoyed mathematics, problem solving <a href="https://github.com/Eoghan1232/Java_files/tree/master/Project_Euler">Euler Problems</a> in my spare time and gaming, so programming seemed to be a logical choice for me and since starting college I have gotten really hooked into it. My passion for learning led me into creating this website. I am currently Treasurer of the Trampoline & Gymnastics club in UL. I enjoy socialising and working with others to get tasks complete.</p>
 	</div>
 	<hr>
 	</div>
